# Haohanyh-HAMOS-ProjectY

./: README.md
HaohanyhHAMOSProjectY Android/: settings.gradle
HaohanyhHAMOSProjectY Android/app/: build.gradle
HaohanyhHAMOSProjectY Android/app/huawei/: build.gradle
HaohanyhHAMOSProjectY Android/app/huawei/src/main/: AndroidManifest.xml
HaohanyhHAMOSProjectY Android/app/src/main/: AndroidManifest.xml
HaohanyhHAMOSProjectY Android/app/src/main/java/utils/: NFCHelper.java
HaohanyhHAMOSProjectY Android/app/src/main/res/drawable/: cursor_customize.xml
HaohanyhHAMOSProjectY Android/app/src/main/res/layout/: activity_first.xml  (+6 more)
HaohanyhHAMOSProjectY Android/gradle/wrapper/: gradle-wrapper.properties
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/: BUILD.gn
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/: BUILD.gn  iot_cloud_sample.c
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/include/: flower.h  huawei_iot.h  iot_cloud_api.h  iot_hardware_api.h  wifi_connect.h
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/main/: iot_main.c
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/nfc/: NT3H.c  NT3H.h  nfc.c  nfc.h  nfc_app.c  nfc_app.h
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/nfc/ndef/: ndef.c  ndef.h
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/nfc/ndef/rtd/: nfcForum.c  nfcForum.h  rtdText.c  rtdText.h  rtdTypes.h  rtdUri.c  rtdUri.h
HaohanyhHAMOSProjectY Hardware/BearPi-HM_Nano/00_iot_cloud_oc_flower/src/: README.md  flower.c  huawei_iot.c  iot_cloud_api.c  iot_hardware_api.c  wifi_connect.c
HaohanyhHAMOSProjectY Hardware/现成bin/: README.md
HaohanyhHAMOSProjectY HarmonyOS-HAP/: FA设备连接华为云核心代码.txt  bearpihelp-release.har
HaohanyhHAMOSProjectY LICENSE/: LICENSE
HaohanyhHAMOSProjectY Resource/BearPi/鸿蒙·季 Nano/: 护花使者使用手册.md
HaohanyhHAMOSProjectY 教程/: .haohanyh
(+33 files in other folders)
